crates/service/tests/document_highlight/snapshots/features__document_highlight__block.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 3,
        "character": 11
      },
      "end": {
        "line": 3,
        "character": 13
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 21
      },
      "end": {
        "line": 6,
        "character": 23
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 19
      },
      "end": {
        "line": 6,
        "character": 20
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    },
    "kind": 2
  }
]
