crates/service/tests/document_highlight/snapshots/features__document_highlight__block_ref_int.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 4,
        "character": 11
      },
      "end": {
        "line": 4,
        "character": 13
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 7,
        "character": 21
      },
      "end": {
        "line": 7,
        "character": 23
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 7,
        "character": 19
      },
      "end": {
        "line": 7,
        "character": 20
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 16
      }
    },
    "kind": 2
  }
]
