crates/service/tests/document_highlight/snapshots/features__document_highlight__call_ident.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 10
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 17
      },
      "end": {
        "line": 2,
        "character": 18
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 26
      },
      "end": {
        "line": 2,
        "character": 28
      }
    },
    "kind": 2
  }
]
