crates/service/tests/document_highlight/snapshots/features__document_highlight__data.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 13
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 14
      },
      "end": {
        "line": 4,
        "character": 19
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 16
      },
      "end": {
        "line": 5,
        "character": 21
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 22
      },
      "end": {
        "line": 6,
        "character": 27
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 7,
        "character": 21
      },
      "end": {
        "line": 7,
        "character": 26
      }
    },
    "kind": 2
  }
]
