crates/service/tests/document_highlight/snapshots/features__document_highlight__field_ref_ident.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 23
      },
      "end": {
        "line": 2,
        "character": 25
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 17
      },
      "end": {
        "line": 5,
        "character": 19
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 17
      },
      "end": {
        "line": 6,
        "character": 19
      }
    },
    "kind": 3
  }
]
