crates/service/tests/document_highlight/snapshots/features__document_highlight__field_ref_int.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 5,
        "character": 17
      },
      "end": {
        "line": 5,
        "character": 18
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 17
      },
      "end": {
        "line": 6,
        "character": 18
      }
    },
    "kind": 3
  }
]
