crates/service/tests/document_highlight/snapshots/features__document_highlight__float.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 24
      },
      "end": {
        "line": 2,
        "character": 27
      }
    },
    "kind": 1
  },
  {
    "range": {
      "start": {
        "line": 2,
        "character": 40
      },
      "end": {
        "line": 2,
        "character": 43
      }
    },
    "kind": 1
  }
]
